Bug 27359 - Missing epoll_pwait2(2) system call wrapper
Summary: Missing epoll_pwait2(2) system call wrapper
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: 2.35
Assignee: Adhemerval Zanella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-06 10:53 UTC by Alejandro Colomar (man-pages)
Modified: 2023-05-06 22:19 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro Colomar (man-pages) 2021-02-06 10:53:46 UTC
Linux 5.11 added epoll_pwait2(2) (see kernel commit 58169a52ebc9a733aeb5bea857bc5daa71a301bb).

Should glibc add a wrapper for it?
Comment 1 Adhemerval Zanella 2022-01-12 19:36:26 UTC
I think it does make sense, current practice is provide Linux syscall wrappers as default.
Comment 2 Adhemerval Zanella 2022-01-17 17:35:37 UTC
Fixed on 2.35.
Comment 3 Paul Pluzhnikov 2023-05-06 22:19:40 UTC
Fixed by:

commit 5f3a7ebc358fdcbafcab4f1bf4067120fb519dfc
Author: Adhemerval Zanella <adhemerval.zanella@linaro.org>
Date:   Wed Jan 12 11:31:53 2022 -0300